OldArchive/fc1a20dcec7199ed745e0031bd5f3072-50d9cfc8a1d350e7409e81e87c2653ba/output
In file included from main.cpp:2:0:
/usr/local/include/boost/range/begin.hpp: In instantiation of 'typename boost::range_iterator<C>::type boost::range_detail::range_begin(C&) [with C = bar::foo; typename boost::range_iterator<C>::type = int*]':
/usr/local/include/boost/range/begin.hpp:108:27:   required from 'typename boost::range_iterator<C>::type boost::range_adl_barrier::begin(T&) [with T = bar::foo; typename boost::range_iterator<C>::type = int*]'
main.cpp:17:19:   required from here
/usr/local/include/boost/range/begin.hpp:49:24: error: 'struct bar::foo' has no member named 'begin'
         return c.begin();
                        ^
